fix: sidebar vertical scrollbar

--- a/dashboard/scss/main.scss
+++ b/dashboard/scss/main.scss
@@ -140,7 +140,7 @@ li {
 
   &:hover {
     width: 320px;
-    overflow: auto;
+    overflow-y: auto;
 
     & .sidebar__header {
       column-gap: 15px;
